@@ -1,3 +1,8 @@
+2002-02-03  eric melski  <ericm@interwoven.com>
+
+	* generic/tkImage.c (Tk_ImageObjCmd): Clean up bogus for loop in
+	[image inuse] subcommand [Bug #485803].
+
 2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkCmds.c (Tk_TkObjCmd): don't use 'bool' as an arg as it
